--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,8 @@
       "48": "img/icon-128.png"
    },
   "background": {
-    "persistent": true,
-    "scripts": [ "scripts/background.js" ]
+	"scripts": [ "scripts/background.js" ],
+    "persistent": true
   },
   "browser_action": {
     "default_icon": "img/icon-128.png",
